--- a/src/styles.css
+++ b/src/styles.css
@@ -38,3 +38,15 @@
   .p-1 {
     padding: 1px;
   }
+
+  .row {
+    display: flex;
+  }
+
+  .col {
+    flex-grow: 2;
+  }
+  input {
+    display: block;
+    margin: 5px;
+  }
